--- a/lambda-calculus.cabal
+++ b/lambda-calculus.cabal
@@ -15,11 +15,13 @@ executable lambda-calculus
   hs-source-dirs:      src
   main-is:             Main.hs
   other-modules:       LambdaCalculus
-                     , LambdaCalculus.AST
-                     , LambdaCalculus.Parser
+                     , Interpreter
+                     , Parser
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-                     , containers
+                     , text
+                     , containers                     
+                     , mtl
                      , megaparsec
                      , simple-repl
   ghc-options:         -Wall
